--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,1 +1,9 @@
-@import "variables.scss"
+@import "variables.scss";
+
+.btn {
+    padding: $padding $padding*2;
+    background: #555555;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+}
